--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <a class="google" href="https://www.google.com/"> find me on Google! </a>
 </div>
 <div class="left">
-<img class="img1" src="/js/images/image1.jpeg">  </img>
+<img class="img1" src="image1.jpeg">  </img>
 </selection>
 </div>
 <section class="container">
@@ -24,7 +24,7 @@ I can design simple websites! I am still learning . my dream is to creat a site 
 <a class="google" href="#">rosen@hi2.in</a>
 </div>
 <div class="left">
-<img class="img1" src="/js/images/image2.jpeg">  </img>
+<img class="img1" src="image2.jpeg">  </img>
 </div>
   </div>
   </section>
