--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <head>
 <title>Fatma Ali website </title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G9YSY6SV7D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G9YSY6SV7D');
+</script>
 </head>
 <body>
 <section class="container">
